--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a multi-line script
         run: |
-          cd '$GITHUB_WORKSPACE'
+          cd $GITHUB_WORKSPACE
           npm run deply
