--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a multi-line script
         run: |
+          git config --global user.email "kay.paetzold@mail.com"
+          git config --global user.name "Kay Paetzold"
           cd $GITHUB_WORKSPACE
           npm install
           npm run deploy
