--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Build
       - uses: actions/checkout@v2
-      - name: Run a multi-line script
         run: |
           git config --global user.email "kay.paetzold@mail.com"
           git config --global user.name "Kay Paetzold"
           cd $GITHUB_WORKSPACE
           npm install
-          npm run deploy
+          npm run build
+          
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          folder: $GITHUB_WORKSPACE 
+       
