--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           folder: $GITHUB_WORKSPACE 
+          branch: main 
