--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           folder: build
-          branch: main 
+          branch: gh-pages 
